<resources>
    <string name="app_name">MyStory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_accept_terms">I accept terms and conditions</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="story1_title">First story</string>
    <string name="story1_subtitle">This is subtitle</string>
    <string name="story1_desc">In this bootcamp I learnt kotlinIn this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin  In this bootcamp I learnt kotlin  In this bootcamp I learnt kotlin  In this bootcamp I learnt kotlin  In this bootcamp I learnt kotlin   In this bootcamp I learnt kotlin  In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlin In this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlinIn this bootcamp I learnt kotlin</string>

</resources>